ADD updated duckhunt rules and links

--- a/duckHunt.html
+++ b/duckHunt.html
@@ -61,14 +61,13 @@
 									<section id="sidebar">
 										<section>
 											<h3>How to Play:</h3>
-											<p>- Use the 'Left' and 'Right' arrow keys to steer the Rocketship.<br />
-											- Press the 'SPACE' bar to thrust the rocket.<br />
-                                            <h3>Objective:</h3>
-											- Navigate the Rocketship to the Green landing platform.<br />
-                                            - Be careful to avoid obstacles, the ground, and the roof of the cave.</p>
+											<p>- Using your phone or tablet, navigate around the <a href="https://github.com/BrandynR/DuckHunt2020-AnARAdventure/blob/main/DuckHunt%202020%20AR/Assets/Sprites/stones.jpg" class="label">'Image Target'</a><br />
+											- Search around the terrain, keeping your eyes peeled for ducks flying around.<br />
+											- Press the 'Bullseye' in the lower right to fire the gun.<br />
+                                            - After the target goal is reached, you will advance to the next level and the goal will increase.</p>
 											<footer>
 												<ul class="actions">
-													<li><a href="https://github.com/BrandynR/Space_Escape" class="button">See the Code</a></li>
+													<li><a href="https://github.com/BrandynR/DuckHunt2020-AnARAdventure" class="button">See the Code</a></li>
 												</ul>
 											</footer>
 										</section>
@@ -103,19 +102,19 @@
 									<section id="content">
 										<h2>DuckHunt 2020: An Augmented Adventure</h2>
 										<iframe src="images/DuckHunt2020.png" style="width:960px;height:600px;border:0"></iframe>
-                                        <p>This Rocketship was navigating a cave system on a distant planet, when it gets lost.
-                                        Now it is up to you take the controls and fly your Rocketship to safety.</p>
-										<p>Space Escape is one of the very first games I built and shared when being introduced to Unity.<br />
-                                        Building this game gave me a chance to introduce particle systems, in game physics, animations and more.
-										Future builds will include mobile controls and UI for Android and iOS. </p>
-										<p>Even as an early project I enjoy the challenge and fun simplicity that Space Escape provides, and it provides a great benchmark to look back on.</p>
+                                        <p>For my AR/VR Specialization portfolio project I created a new, modern version, of the 1984 Nintendo classic Duck Hunt. <br />
+                                            Duck Hunt was designed to be more immersive and interactive than any other game on the market at the time. And it is a game, that in my opinion, was far ahead of its time.<br />
+                                            However Duck Hunt has never gained the same success in later releases, as other titles in the Nintendo family.<br />
+                                            So I built a 21st Century version, that is relevant with today's available technology.
+                                            
+										<p>Built in Unity and utilizing Vuforia's API, DuckHunt 2020 combined aspects from every part of my Holberton AR/VR Specialization curriculum.</p>
 										
 										<h3>How To Play</h3>
 										<ul>
-											<li><h5>Move:</h5> Use the 'Left' and 'Right' arrow keys to steer the Rocketship left or right.</li><br />
-											<li><h5>Thrust:</h5> Use the 'SPACE' bar to provide thrust to the Rocketship.</li><br />
-										<h3>Objective</h3>
-											<li><h5>Escape</h5> Navigate the Rocketship safely to the Green landing platform to advance to the next part of the cave.</li>
+											<li><h5>Install:</h5> Download the APK <a href="https://www.dropbox.com/s/12cxh9w1qazjrmc/DuckHunt2020.apk?dl=0" class="label">here</a>, to install on your device.</li><br />
+											<li><h5>Print:</h5> Print off a copy of the <a href="https://github.com/BrandynR/DuckHunt2020-AnARAdventure/blob/main/DuckHunt%202020%20AR/Assets/Sprites/stones.jpg" class="label">'Image Target'</a> to be tracked.</li><br />
+											<li><h5>Shoot!</h5> With your device in hand, move around the Image Target to find the ducks flying around.<br />
+                                            Tap the Bullseye in the lower right to fire.</li>
 										</ul>
 									</section>
 
