Updated portfolio site About Me section

--- a/index.html
+++ b/index.html
@@ -39,12 +39,11 @@
 								<a href="#">Connect</a>
 								<ul>
 									<li><a href="https://www.linkedin.com/in/brandynreindel/">LinkedIn</a></li>
-                                    <li><a href="https://twitter.com/Optimus_is_Me">Twitter</a></li>
 									<li><a href="https://github.com/BrandynR">GitHub</a></li>
+                                    <li><a href="mailto:brandyn.reindel@gmail.com">Email Me</a></li>
 								</ul>
 							</li>
-							<li><a href="mailto:brandyn.reindel@gmail.com">Email Me</a></li>
-							<li><a href="https://www.dropbox.com/s/r064t7hj8tm8tgn/Brandyn%20Reindel-Software%20Engineer%20%28Feb.%202021%29.pdf?dl=0" class="button primary">Download Resume</a></li>
+							<li><a href="https://www.dropbox.com/scl/fi/lceg4l888jjek08g5c7xk/Brandyn_Reindel_Resume.pdf?rlkey=w0x43jnrcgd47xefk1b3rv94p&dl=0" class="button primary">Download Resume</a></li>
 						</ul>
 					</nav>
 				</header>
@@ -74,21 +73,35 @@
 								<div class="col-4 col-12-medium">
 									<header>
 										<h2>Who Am I?</h2>
-										<p><h3>Brandyn Reindel:</h3>
-										-Software Engineer<br />
-										-Unity Developer<br />
-										-All Around Nice Guy!</p>
+										<p><h3>Technical Skills</h3>
+										- C# | C | HTML | CSS | Java | Objective-C | PHP | Python<br />
+										- Agile | Scrum Methodologies<br />
+										- Android | iOS | WebGL | MacOS | Windows<br />
+										- API Integration<br />
+										- AR/VR Development<br />
+										- AWS<br />
+										- CI/CD<br />
+										- Cross-Team Development <br />
+										- Google Play | Testflight | App Center | Microsoft Store<br />
+										- Jenkins<br />
+										- Scripting<br />
+										- Unity3D<br />
+										- Version Control<br />
 									</header>
 								</div>
 								<div class="col-4 col-12-medium">
-									<p>I am a Full-Stack Software Engineer. I attended Holberton School in New Haven, CT, and completed a second year specialization in AR/VR and Unity Development (Graduated January 2021).<br />
-									In March of 2020 I completed the rigorous, fast-paced foundations curriculum at Holberton School. 
-									Where I was taught not just what to learn, but how to learn.<br />
-									Through peer learning and a full-stack project-based curriculum,
-									Holberton has given me the skills to not only be a great software engineer, but a great team member.</p>
+									<p>
+										I am a Full-Stack Software Engineer with a passion for Unity 3D Development. I graduated amongst the top of my class from Holberton School New Haven, where I completed my second year specialization in Augmented/Virtual Reality Development.<br />
+										For the past 3 years I have enjoyed working in the EdTech space, developing 3D Anatomy and Biology reference applications for higher education. Released globally on 5 platforms (Android, iOS, WebGL, MacOS, and Windows), and in 7 supported languages.
+										Our applications helped to change not only how students study and learn, but provided professors and universities with new interactive tools to teach the next generation of students in the most accurate and engaging way possible.<br />
+										I am a motivated and driven team player, with a thirst for knowledge and an aptitude for learning. I am hoping to share my proven skills with a new team, and eager to pick up some new ones along the way.
+									</p>
+									<p>Fun fact, prior to going back to school in 2019 to pursue my passion for Game Development/Software Engineering, I worked for many years as a full time carpenter and woodworker. Mostly notably, I spent a few years fabricating custom staircases at a shop where we specialized in circular stairs. 
+										This job was a great test of creativity, mathematics, planning, problem-solving, teamwork and attention to detail; all of which are skills that have helped me immensely as a Software Engineer.
+									</p>
 								</div>
 								<div class="col-4 col-12-medium">
-									<p>Born and raised in CT, and currently living in Hamden. I am a fan all things Tech, Augmented and Virtual Reality, and all aspects of Software and Game Development.</p>
+									<p>Born and raised outside the pizza capital of the world New Haven, CT, but I currently call central Massachusetts home. I am a fan all things Tech, Augmented and Virtual Reality, Gamified Education, and so much more so please reach out and ask!.</p>
 								</div>
 							</div>
 						</div>
@@ -104,12 +117,12 @@
 						
 						<header>
 							<h2>DuckHunt2020:</h2>
-							<p>An Augmented Adeventure</p>
+							<p>An Augmented Adventure</p>
 						</header>
-						<p>For my AR/VR Specialization portfolio project I intended to create a new, modern version of the 1984 Nintendo classic Duck Hunt.</p>
-						<p>This game was designed to be more immersive and interactive than any other game on the market at the time. And it is a game, that in my opinion, was far ahead of its time.
+						<p>For my AR/VR capstone project at Holberton School, I intended to create a new, modern version of the 1984 Nintendo classic Duck Hunt.</p>
+						<p>The original game was designed to be more immersive and interactive than any other title on the market at the time. And it is a game, that in my opinion, was far ahead of its' time.
 							However Duck Hunt has never gained the same success in later releases, as other titles in the Nintendo family.</p>
-						<p>So I built a 21st Century version, that is relevant with today's available technology.</p>
+						<p>So I built a 21st Century version, that is intended to be just as immersive as the original, but more relevant with today's available technology.</p>
 							</p>
 						<ul class="actions">
 							<li><a href="duckHunt.html" class="button">Test Your Aim</a></li>
@@ -126,9 +139,13 @@
 							<h2>Tetris</h2>
 							<p>An updated 2D clone of a timeless classic.</p>
 						</header>
-						<p>Built as an optional project during my AR/VR Specialization at Holberton School.
+						<p>Built as an optional project while completeing my AR/VR Specialization at Holberton School.
 							Creating this revamped classic gave me the opportunity explore particle systems and more immersive audio.
 							As well as adding features the original did not have, like holding pieces off to the side.
+						</p>
+						<p>
+							I loved the original not only for it's elegant simplicity that keeps a player engaged for hours on end, or it's ability to draw an in audience both young and old with the easy to understand objective and controls. 
+							I also love this game because of the nostalgia and memories that come along with it for me, so getting a chance to put my own spin on this classic was a blast.
 						</p>
 						<ul class="actions">
 							<li><a href="tetris.html" class="button">Check It Out</a></li>
