Removed old Twitter link and replaced resume file in top bar for each landing page

--- a/duckHunt.html
+++ b/duckHunt.html
@@ -36,12 +36,11 @@
 								<a href="#">Connect</a>
 								<ul>
 									<li><a href="https://www.linkedin.com/in/brandynreindel/">LinkedIn</a></li>
-                                    <li><a href="https://twitter.com/Optimus_is_Me">Twitter</a></li>
 									<li><a href="https://github.com/BrandynR">GitHub</a></li>
+									<li><a href="mailto:brandyn.reindel@gmail.com">Email Me</a></li>
 								</ul>
 							</li>
-							<li><a href="mailto:brandyn.reindel@gmail.com">Email Me</a></li>
-							<li><a href="https://www.dropbox.com/s/r064t7hj8tm8tgn/Brandyn%20Reindel-Software%20Engineer%20%28Feb.%202021%29.pdf?dl=0" class="button primary">Download Resume</a></li>
+							<li><a href="https://www.dropbox.com/scl/fi/lceg4l888jjek08g5c7xk/Brandyn_Reindel_Resume.pdf?rlkey=w0x43jnrcgd47xefk1b3rv94p&dl=0" class="button primary">Download Resume</a></li>
 						</ul>
 					</nav>
 				</header>
@@ -126,7 +125,6 @@
 			<!-- Footer -->
 				<footer id="footer">
 					<ul class="icons">
-						<li><a href="https://twitter.com/Optimus_is_Me" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
 						<li><a href="https://www.linkedin.com/in/brandynreindel/" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 						<li><a href="https://github.com/BrandynR" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 						<li><a href="mailto:brandyn.reindel@gmail.com" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
