Updated main page profile picture

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 							- AR/VR Specialist -</p>
 							<p></p>
 						</header>
-						<span class="image"><img src="images/profilepic.jpg" alt="" /></span>
+						<span class="image"><img src="images/Profile_Picture.png" alt="" /></span>
 					</div>
 					<a href="#one" class="goto-next scrolly">Next</a>
 				</section>
